final style changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Scratch Project</title>
+  <title>HealthPair</title>
   <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Joan&family=Kdam+Thmor+Pro&family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
